Fix spacing in form

--- a/frontend/src/components/FormField/index.module.css
+++ b/frontend/src/components/FormField/index.module.css
@@ -3,4 +3,5 @@
   grid-template-rows: repeat(2, auto);
   grid-gap: 12px;
   width: 100%;
+  margin-bottom: 32px;
 }
