--- a/frontend/src/components/FormInput/index.module.css
+++ b/frontend/src/components/FormInput/index.module.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 60px;
   padding: 20px 24px;
-  margin-bottom: 32px;
   font-family: var(--font-family-body);
   font-size: var(--font-size-xs);
   line-height: var(--font-size-sm);
